Updated fight, and character constructor

--- a/Project 2/.vscode/settings.json
+++ b/Project 2/.vscode/settings.json
@@ -38,7 +38,15 @@
     "xmemory0": "cpp",
     "xstddef": "cpp",
     "xtr1common": "cpp",
-    "xutility": "cpp"
+    "xutility": "cpp",
+    "chrono": "cpp",
+    "functional": "cpp",
+    "list": "cpp",
+    "ratio": "cpp",
+    "xthread": "cpp",
+    "thread": "cpp",
+    "unordered_map": "cpp",
+    "xhash": "cpp"
   },
   "makefile.launchConfigurations": [
     {
