--- a/Project 2/.vscode/settings.json
+++ b/Project 2/.vscode/settings.json
@@ -58,6 +58,11 @@
       "cwd": "c:\\Users\\Ali\\Desktop\\VSCode projects\\CS3100-PROJECTS\\Project 2",
       "binaryPath": "c:\\Users\\Ali\\Desktop\\VSCode projects\\CS3100-PROJECTS\\Project 2\\main.exe",
       "binaryArgs": []
+    },
+    {
+      "cwd": "c:\\Users\\Ali\\Documents\\GitHub\\CS3100-PROJECTS\\Project 2",
+      "binaryPath": "c:\\Users\\Ali\\Documents\\GitHub\\CS3100-PROJECTS\\Project 2\\main.exe",
+      "binaryArgs": []
     }
   ]
 }
