--- a/Project 3/.vscode/settings.json
+++ b/Project 3/.vscode/settings.json
@@ -4,6 +4,11 @@
       "cwd": "c:\\Users\\Ali\\Desktop\\VSCode projects\\CS3100-PROJECTS\\Project 3",
       "binaryPath": "c:\\Users\\Ali\\Desktop\\VSCode projects\\CS3100-PROJECTS\\Project 3\\main.exe",
       "binaryArgs": []
+    },
+    {
+      "cwd": "c:\\Users\\Ali\\Documents\\GitHub\\CS3100-PROJECTS\\Project 3",
+      "binaryPath": "c:\\Users\\Ali\\Documents\\GitHub\\CS3100-PROJECTS\\Project 3\\main.exe",
+      "binaryArgs": []
     }
   ],
   "files.associations": {
