Finished operator= overload

--- a/Project 3/.vscode/settings.json
+++ b/Project 3/.vscode/settings.json
@@ -14,6 +14,8 @@
   "files.associations": {
     "new": "cpp",
     "iostream": "cpp",
-    "iosfwd": "cpp"
+    "iosfwd": "cpp",
+    "ostream": "cpp",
+    "string": "cpp"
   }
 }
