--- a/Project 4/.vscode/settings.json
+++ b/Project 4/.vscode/settings.json
@@ -3,6 +3,46 @@
     "iosfwd": "cpp",
     "xstring": "cpp",
     "vector": "cpp",
-    "string": "cpp"
-  }
+    "string": "cpp",
+    "xutility": "cpp",
+    "cmath": "cpp",
+    "cstddef": "cpp",
+    "cstdint": "cpp",
+    "cstdio": "cpp",
+    "cstdlib": "cpp",
+    "cstring": "cpp",
+    "cwchar": "cpp",
+    "exception": "cpp",
+    "initializer_list": "cpp",
+    "ios": "cpp",
+    "iostream": "cpp",
+    "istream": "cpp",
+    "limits": "cpp",
+    "memory": "cpp",
+    "new": "cpp",
+    "ostream": "cpp",
+    "stdexcept": "cpp",
+    "streambuf": "cpp",
+    "system_error": "cpp",
+    "tuple": "cpp",
+    "type_traits": "cpp",
+    "typeinfo": "cpp",
+    "utility": "cpp",
+    "xfacet": "cpp",
+    "xiosbase": "cpp",
+    "xlocale": "cpp",
+    "xlocinfo": "cpp",
+    "xlocnum": "cpp",
+    "xmemory": "cpp",
+    "xmemory0": "cpp",
+    "xstddef": "cpp",
+    "xtr1common": "cpp"
+  },
+  "makefile.launchConfigurations": [
+    {
+      "cwd": "c:\\Users\\Ali\\Desktop\\VSCode projects\\CS3100-PROJECTS\\Project 4",
+      "binaryPath": "c:\\Users\\Ali\\Desktop\\VSCode projects\\CS3100-PROJECTS\\Project 4\\main.exe",
+      "binaryArgs": []
+    }
+  ]
 }
