--- a/Project 5/.vscode/settings.json
+++ b/Project 5/.vscode/settings.json
@@ -7,6 +7,9 @@
     }
   ],
   "files.associations": {
-    "new": "cpp"
+    "new": "cpp",
+    "iosfwd": "cpp",
+    "iostream": "cpp",
+    "ostream": "cpp"
   }
 }
