--- a/Project 5/.vscode/settings.json
+++ b/Project 5/.vscode/settings.json
@@ -31,6 +31,7 @@
     "stdexcept": "cpp",
     "streambuf": "cpp",
     "system_error": "cpp",
-    "tuple": "cpp"
+    "tuple": "cpp",
+    "random": "cpp"
   }
 }
