--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,7 @@ Project 5/.vs/Project 5/v17/Browse.VC.db
 Project 5/.vs/Project 5/v17/.suo
 Project 5/.vs/Project 5/FileContentIndex/read.lock
 Project 5/.vs/Project 5/FileContentIndex/62054713-59e6-47b1-b6f0-b19ab6ccce04.vsidx
+Project 6/script.txt
+Project 6/project6.o
+Project 6/HashTable.o
+Project 6/Database.o
